--- a/coding/index.html
+++ b/coding/index.html
@@ -11,16 +11,20 @@
     <link rel="stylesheet" href="../coding/final.css" />
     <script src="../base/alibs/jq3.js"></script>
     <script src="../base/alibs/jsyaml.js"></script>
+		<script src="../allglobals.js"></script>
   </head>
   <body>
+    <div id="dMain" class="fullpage"></div>
     <script>
       const OWNPROPS = Object.getOwnPropertyNames(window).concat(Object.getOwnPropertyNames(EventTarget.prototype));
     </script>
   </body>
   <script src="../coding/closure.js"></script>
-  <script src="../coding/bau1.js"></script>
-  <script src="../coding/bau2.js"></script>
-  <script src="../coding/start.js"></script>
+  
+  <!-- <script src="../allfuncs.js"></script> -->
+  <!-- <script src="../coding/bau1.js"></script> -->
+  <!-- <script src="../coding/bau2.js"></script> -->
+  <!-- <script src="../coding/start.js"></script> -->
   <script>
     onload = start;
   </script>
