--- a/coding/index.html
+++ b/coding/index.html
@@ -19,12 +19,12 @@
       const OWNPROPS = Object.getOwnPropertyNames(window).concat(Object.getOwnPropertyNames(EventTarget.prototype));
     </script>
   </body>
-  <script src="../coding/closure.js"></script>
+  <!-- <script src="../coding/closure.js"></script> -->
   
-  <!-- <script src="../allfuncs.js"></script> -->
-  <!-- <script src="../coding/bau1.js"></script> -->
-  <!-- <script src="../coding/bau2.js"></script> -->
-  <!-- <script src="../coding/start.js"></script> -->
+  <script src="../allfuncs.js"></script>
+  <script src="../coding/bau1.js"></script>
+  <script src="../coding/bau2.js"></script>
+  <script src="../coding/start.js"></script>
   <script>
     onload = start;
   </script>
