--- a/coding/index.html
+++ b/coding/index.html
@@ -6,12 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>coding</title>
     <link rel="stylesheet" href="../base/alibs/fa/fa.min.css" />
-    <link rel="stylesheet" href="../base/alibs/transition.css" />
     <link rel="stylesheet" href="../base/assets/fonts/fonts.css" />
     <link rel="stylesheet" href="../coding/final.css" />
     <script src="../base/alibs/jq3.js"></script>
     <script src="../base/alibs/jsyaml.js"></script>
-		<script src="../allglobals.js"></script>
   </head>
   <body>
     <div id="dMain" class="fullpage"></div>
@@ -19,12 +17,12 @@
       const OWNPROPS = Object.getOwnPropertyNames(window).concat(Object.getOwnPropertyNames(EventTarget.prototype));
     </script>
   </body>
-  <!-- <script src="../coding/closure.js"></script> -->
-  
-  <script src="../allfuncs.js"></script>
+
+	<script src="../coding/closure.js"></script>
   <script src="../coding/bau1.js"></script>
   <script src="../coding/bau2.js"></script>
   <script src="../coding/start.js"></script>
+  
   <script>
     onload = start;
   </script>
