--- a/noc/index.html
+++ b/noc/index.html
@@ -6,7 +6,7 @@
 		<link rel="stylesheet" href="../base/alibs/fa/fa.min.css" />
 		<!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.1.0/css/font-awesome.min.css" /> -->
 		<link rel="stylesheet" href="../base/assets/fonts/fonts.css" />
-		<link rel="stylesheet" href="../basejs/basemin.css" />
+		<link rel="stylesheet" href="../allcss.css" />
 		<meta charset="utf-8" />
 		<script src='https://www.google.com/jsapi?autoload={"modules":[{"name":"visualization","version":"1","packages":["corechart"]}]}'></script>
 	</head>
@@ -34,7 +34,8 @@
 		<script src="../base/alibs/matter.min.js"></script>
 		<script src="../base/alibs/nerdamer.min.js"></script>
 
-		<script src="../basejs/basemin.js"></script>
+		<script src="../allglobals.js"></script>
+		<script src="../allfuncs.js"></script>
 
 
 		<script src="../noc/normaldist.js"></script>
@@ -45,8 +46,8 @@
 		<script src="../noc/onclick.js"></script>
 		<script src="../noc/test.js"></script>
 
-		<script src="../noc/classes.js"></script>
-		<script src="../noc/factory.js"></script>
+		<!-- <script src="../noc/classes.js"></script> -->
+		<!-- <script src="../noc/factory.js"></script> -->
 		<script src="../noc/baustelle.js"></script>
 		<script src="../noc/start.js"></script>
 	</body>
