--- a/coding/index.html
+++ b/coding/index.html
@@ -19,8 +19,8 @@
   </body>
 
 	<script src="../coding/closure.js"></script>
-  <script src="../coding/bau1.js"></script>
-  <script src="../coding/bau2.js"></script>
+  <!-- <script src="../coding/bau1.js"></script> -->
+  <!-- <script src="../coding/bau2.js"></script> -->
   <script src="../coding/start.js"></script>
   
   <script>
