--- a/nature/index.html
+++ b/nature/index.html
@@ -1,31 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
-	<head>
-		<title>nature</title>
-		<link rel="icon" href="../base/assets/icons/belinda.png" style="height: 40px" />
-		<link rel="stylesheet" href="../base/alibs/fa/fa.min.css" />		
-		<link rel="stylesheet" href="../base/assets/fonts/fonts.css" />
-		<!-- <link rel="stylesheet" href="../allcss.css" /> -->
-		<link rel="stylesheet" href="../nature/final.css" />
-		<script src="../base/alibs/anime.min.js"></script>
-		<script src="../base/alibs/jsyaml.js"></script>
-		<meta charset="utf-8" />
-	</head>
-	<body>
-		<div id="dHeader"></div>
-		<div id="dToolbar"></div>
-		<div id="dMessage"></div>
-		<div id="dTable"></div>
+  <head>
+    <title>nature</title>
+    <link rel="icon" href="../base/assets/icons/belinda.png" style="height: 40px" />
+    <link rel="stylesheet" href="../base/alibs/fa/fa.min.css" />
+    <link rel="stylesheet" href="../base/assets/fonts/fonts.css" />
+    <link rel="stylesheet" href="../allsafecss.css" />
+    <!-- <link rel="stylesheet" href="../nature/final.css" /> -->
+    <script src="../base/alibs/anime.min.js"></script>
+    <script src="../base/alibs/jsyaml.js"></script>
+    <meta charset="utf-8" />
+  </head>
+  <body>
+    <div id="dHeader"></div>
+    <div id="dToolbar"></div>
+    <div id="dMessage"></div>
+    <div id="dTable"><pre class="battery-log">{"charged":"100%","cycles":130}</pre></div>
 
-		<!-- <script src="../allglobals.js"></script> -->
-		<!-- <script src="../allfuncs.js"></script> -->
-		<script src="../nature/closure.js"></script>
+    <script src="../allglobals.js"></script>
+    <script src="../allfuncs.js"></script>
+    <script src="../nature/closure.js"></script>
 
-		<!-- <script src="../nature/lsystem.js"></script>
-		<script src="../nature/onclick.js"></script>
-		<script src="../nature/tree.js"></script>
+    <script src="../nature/lsystem.js"></script>
+    <script src="../nature/onclick.js"></script>
+    <script src="../nature/tree.js"></script>
+    <script src="../nature/baustelle.js"></script>
 
-		<script src="../nature/baustelle.js"></script> -->
-		<script src="../nature/start.js"></script>
-	</body>
+    <script src="../nature/start.js"></script>
+  </body>
 </html>
