--- a/coding/index.html
+++ b/coding/index.html
@@ -18,6 +18,7 @@
     </script>
   </body>
 
+	<script src="../allfuncs.js"></script>
 	<script src="../coding/closure.js"></script>
   <!-- <script src="../coding/bau1.js"></script> -->
   <!-- <script src="../coding/bau2.js"></script> -->
