--- a/wanimex/examples/advanced-staggering.html
+++ b/wanimex/examples/advanced-staggering.html
@@ -17,6 +17,7 @@
   <link rel="icon" type="image/png" href="../assets/img/favicon.png" >
   <link href="../assets/css/animejs.css" rel="stylesheet">
   <link href="../assets/css/documentation.css" rel="stylesheet">
+	<script src="../../base/alibs/anime.min.js"></script>
   <style>
 
     :root {
