--- a/wanimex/examples/timeline.html
+++ b/wanimex/examples/timeline.html
@@ -17,6 +17,7 @@
   <link rel="icon" type="image/png" href="../assets/img/favicon.png" >
   <link href="../assets/css/animejs.css" rel="stylesheet">
   <link href="../assets/css/documentation.css" rel="stylesheet">
+	<script src="../../base/alibs/anime.min.js"></script>
   <!-- <script src="../../lib/anime.min.js"></script> -->
   <!-- <script src="../assets/js/anime/anime.2.2.0.js"></script> -->
   <style>
@@ -119,8 +120,8 @@
 </body>
 <script type="module">
 
-  import anime from '../../src/index.js';
-  import animePlayer from '../assets/js/anime.player.js'
+  //import anime from '../../src/index.js';
+  //import animePlayer from '../assets/js/anime.player.js'
 
   var els = document.querySelectorAll('.el');
   var controlsProgressEl = document.querySelector('.controls .progress');
