--- a/animex/test99.html
+++ b/animex/test99.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <link rel="stylesheet" href="test0.css">
-  <script src="//cdnjs.cloudflare.com/ajax/libs/animejs/2.2.0/anime.js"></script>
+  <script src="../base/alibs/anime/anime.js"></script>
   <title>Anime Animation</title>
 </head>
 <body>
