--- a/coding/index.html
+++ b/coding/index.html
@@ -20,8 +20,8 @@
 
 	<script src="../allfuncs.js"></script>
 	<script src="../coding/closure.js"></script>
-  <!-- <script src="../coding/bau1.js"></script> -->
-  <!-- <script src="../coding/bau2.js"></script> -->
+  <script src="../coding/bau1.js"></script>
+  <script src="../coding/bau2.js"></script>
   <script src="../coding/start.js"></script>
   
   <script>
