--- a/animex/colors.html
+++ b/animex/colors.html
@@ -7,7 +7,7 @@
     <link href="../base/alibs/anime/css/documentation.css" rel="stylesheet" />
     <!-- <script src="../animex/chunk.js"></script> -->
     <!-- <script src="../animex/anime.js"></script> -->
-    <script src="../base/alibs/anime.min.js"></script>
+    <script src="../base/alibs/anime/anime.js"></script>
     <script src="../allfuncs.js"></script>
     <style>
       body {
