--- a/wanimex/examples/built-in-easings.html
+++ b/wanimex/examples/built-in-easings.html
@@ -73,7 +73,7 @@
       <div class="wrapper dots-wrapper"></div>
     </div>
   </body>
-	<script src="../../base/alibs/anime.min.js"></script>
+	<script src="../../base/alibs/anime/anime.js"></script>
   <script type="module">
     //import anime from '../../src/index.js';
 
