--- a/MUELL.html
+++ b/MUELL.html
@@ -1,3 +1,6 @@
+
+
+
 <!DOCTYPE html>
 <html>
   <head>
@@ -5,15 +8,16 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
     <link rel="icon" type="image/png" href="../../base/assets/icons/belinda.png" />
-    <script src="../../base/alibs/anime/anime.js"></script>
-    <link href="../../allsafecss.css" rel="stylesheet" />
+		<script src="//cdnjs.cloudflare.com/ajax/libs/animejs/2.2.0/anime.js"></script>
+    <!-- <script src="../../base/alibs/anime/anime.js"></script> -->
+    <!-- <link href="../../allsafecss.css" rel="stylesheet" /> -->
+    <!-- <link href="../animex/anim.css" rel="stylesheet" /> -->
   </head>
   <body>
 		<div id="table"></div>
 	</body>
-	<script src="../allglobals.js"></script>
-	<script src="../allfuncs.js"></script>
-	<!-- 
+	<!-- <script src="../allfuncs.js"></script> -->
+	<!-- <script src="../allglobals.js"></script>
 	<script src="../animex/bau1.js"></script>
 	<script src="../animex/bau2.js"></script>
 	<script src="../animex/start.js"></script> -->
