--- a/_weg/color.html
+++ b/_weg/color.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
     <link href="../base/alibs/anime/css/animejs.css" rel="stylesheet" />
     <link href="../base/alibs/anime/css/documentation.css" rel="stylesheet" />
-    <script src="../base/alibs/anime.min.js"></script>
+    <script src="../base/alibs/anime/anime.js"></script>
     <!-- <link href="../animex/anim.css" rel="stylesheet" /> -->
     <style>
       body {
