--- a/nature/index.html
+++ b/nature/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="../base/assets/fonts/fonts.css" />
     <link rel="stylesheet" href="../allsafecss.css" />
     <!-- <link rel="stylesheet" href="../nature/final.css" /> -->
-    <script src="../base/alibs/anime.min.js"></script>
+    <script src="../base/alibs/anime/anime.js"></script>
     <script src="../base/alibs/jsyaml.js"></script>
     <meta charset="utf-8" />
   </head>
