--- a/wanimex/amex/index.html
+++ b/wanimex/amex/index.html
@@ -7,7 +7,7 @@
     <link rel="icon" type="image/png" href="../../base/assets/icons/belinda.png" />
     <!-- <link href="../assets/css/animejs.css" rel="stylesheet"> -->
     <!-- <link href="../assets/css/documentation.css" rel="stylesheet"> -->
-    <script src="../../base/alibs/anime.min.js"></script>
+    <script src="../../base/alibs/anime/anime.js"></script>
     <link href="../../allsafecss.css" rel="stylesheet" />
   </head>
   <body></body>
