--- a/wanimex/examples/colors-test.html
+++ b/wanimex/examples/colors-test.html
@@ -17,8 +17,8 @@
     <link rel="icon" type="image/png" href="../assets/img/favicon.png" />
     <link href="../assets/css/documentation.css" rel="stylesheet" />
     <!-- <script src="../../allfuncs.js"></script> -->
-    <script src="../../base/alibs/anime.min.js"></script>
-    <!-- <script src="../../lib/anime.min.js"></script> -->
+    <script src="../../base/alibs/anime/anime.js"></script>
+    <!-- <script src="../../lib/anime/anime.js"></script> -->
     <!-- <script src="../assets/js/anime/anime.2.0.2.js"></script> -->
     <!-- <script src="../assets/js/anime/anime.1.3.js"></script> -->
     <style>
