--- a/wanimex/examples/keyframes.html
+++ b/wanimex/examples/keyframes.html
@@ -17,7 +17,7 @@
   <link rel="icon" type="image/png" href="../assets/img/favicon.png" >
   <link href="../assets/css/animejs.css" rel="stylesheet">
   <link href="../assets/css/documentation.css" rel="stylesheet">
-	<script src="../../base/alibs/anime.min.js"></script>
+	<script src="../../base/alibs/anime/anime.js"></script>
   <style>
 
     :root {
@@ -59,7 +59,7 @@
   <div class="keyframes-visualizer"></div>
 
 </body>
-<!-- <script src="../../lib/anime.min.js"></script> -->
+<!-- <script src="../../lib/anime/anime.js"></script> -->
 <script>
 
   //import anime from '../../src/index.js';
