--- a/wanimex/examples/svg-path-animation.html
+++ b/wanimex/examples/svg-path-animation.html
@@ -16,7 +16,7 @@
   <link rel="apple-touch-icon-precomposed" href="../assets/img/social-media-image.png">
   <link rel="icon" type="image/png" href="../assets/img/favicon.png">
   <link href="../assets/css/documentation.css" rel="stylesheet">
-  <!-- <script src="../../lib/anime.min.js"></script> -->
+  <!-- <script src="../../lib/anime/anime.js"></script> -->
   <style>
     body {
       display: flex;
