--- a/animex/master.html
+++ b/animex/master.html
@@ -9,14 +9,12 @@
     <link href="../../allsafecss.css" rel="stylesheet" />
   </head>
   <body>
-		<div id="table"></div>
-	</body>
-	<script src="../allglobals.js"></script>
-	<script src="../allfuncs.js"></script>
-	<!-- 
-	<script src="../animex/bau1.js"></script>
-	<script src="../animex/bau2.js"></script>
-	<script src="../animex/start.js"></script> -->
-	<script src="../animex/test.js"></script>
-	<script>onload=animetest_color</script>
+    <div id="table" style="padding:25px"></div>
+  </body>
+  <script src="../allglobals.js"></script>
+  <script src="../allfuncs.js"></script>
+  <script src="../animex/test.js"></script>
+  <script>
+    onload = animetest_color;
+  </script>
 </html>
