--- a/animex/test99.html
+++ b/animex/test99.html
@@ -2,7 +2,6 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <link rel="stylesheet" href="test0.css">
   <script src="../base/alibs/anime/anime.js"></script>
   <title>Anime Animation</title>
 </head>
@@ -15,7 +14,7 @@
 			translateX: 200,
 			rotate: 45,
 			opacity: .5,
-			background: '#ffffff',
+			background: '#ffff00',
 			//backgroundColor: 'blue',
 			delay: 1000,
 		});
