--- a/docsanime/index.html
+++ b/docsanime/index.html
@@ -13,7 +13,8 @@
   <link href="../docsanime/animejs.css" rel="stylesheet">
   <link href="../docsanime/anime-theme.css" rel="stylesheet">
   <link href="../docsanime/documentation.css" rel="stylesheet">
-  <script src="../docsanime/anime.min.js"></script>
+  <!-- <script src="../docsanime/anime.min.js"></script> -->
+  <script src="../ui/anime3.js"></script>
 </head>
 <body>
   <div class="content">
