--- a/ui/master.html
+++ b/ui/master.html
@@ -5,7 +5,8 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
     <link rel="icon" type="image/png" href="../../base/assets/icons/belinda.png" />
-    <script src="../../base/alibs/anime/anime.js"></script>
+    <!-- <script src="../../base/alibs/anime/anime.js"></script> -->
+    <script src="../ui/anime3.js"></script>
     <link href="../../allsafecss.css" rel="stylesheet" />
   </head>
   <body>
