--- a/docsanime/index.html
+++ b/docsanime/index.html
@@ -4158,5 +4158,10 @@ anime({
   <script src="../docsanime/highlight.pack.js"></script>
   <script src="../docsanime/beautify-html.js"></script>
   <script src="../docsanime/documentation.js"></script>
+  <script src="../allglobals.js"></script>
+  <script src="../allfuncs.js"></script>
+  <script src="../docsanime/bau.js"></script>
+  <script src="../docsanime/bau2.js"></script>
+  <script src="../docsanime/start.js"></script>
 </body>
 </html>
