--- a/docsanime/index.html
+++ b/docsanime/index.html
@@ -22,10 +22,6 @@
     </header>
     <section class="pane sidebar">
       <nav class="navigation"></nav>
-      <div class="sidebar-info">
-        <a class="github-button" href="https://github.com/juliangarnier/anime/archive/master.zip" data-color-scheme="no-preference: dark; light: dark; dark: dark;" data-icon="octicon-cloud-download" aria-label="Download juliangarnier/anime on GitHub">Download</a>
-        <a class="github-button" href="https://github.com/juliangarnier/anime" data-color-scheme="no-preference: dark; light: dark; dark: dark;" data-show-count="true" aria-label="Star juliangarnier/anime on GitHub">Star</a>
-      </div>
     </section>
     <section class="pane demos">
 
@@ -3208,7 +3204,6 @@ let p=mBy('path1');
 p.d='M50,50a50,50 0 1,0 100,0a50,50 0 1,0 -100,0';
 var path = anime.path('.motion-path-demo #path1');
 
-
 anime({
   targets: '.motion-path-demo .el',
   translateX: path('x'),
@@ -4158,9 +4153,8 @@ anime({
       
     </section>
   </div>
-  <script async defer src="https://buttons.github.io/buttons.js"></script>
-  <script src="../docsanime/highlight.pack.js"></script>
-  <script src="../docsanime/beautify-html.js"></script>
+  <!-- <script src="../docsanime/highlight.pack.js"></script> -->
+  <!-- <script src="../docsanime/beautify-html.js"></script> -->
   <script src="../docsanime/documentation.js"></script>
   <script src="../allglobals.js"></script>
   <script src="../allfuncs.js"></script>
