--- a/hltest/index.html
+++ b/hltest/index.html
@@ -7,11 +7,11 @@
     <title>Document</title>
     <link rel="stylesheet" href="../base/assets/fonts/fonts.css" />
     <script src="../base/alibs/jsyaml.js"></script>
-    <link rel="stylesheet" href="../base/alibs/highlight/highlight.css" />
-    <link rel="stylesheet" href="../hltest/highlight.css" />
+    <link rel="stylesheet" href="../hltest/vs.css" />
     <script src="../base/alibs/highlight/highlight.min.js"></script>
   </head>
-  <body style="background:#111">
+  <body style="font-family:impact">
+		<h1>CODE SAMPLES</h1>
     <pre><code id="code1" class="js"></code></pre>
     <pre><code id="code2" class="html"></code></pre>
     <pre><code id="code3" class="css"></code></pre>
