--- a/beatest/index.html
+++ b/beatest/index.html
@@ -7,21 +7,18 @@
     <title>Document</title>
     <link rel="stylesheet" href="../base/assets/fonts/fonts.css" />
     <script src="../base/alibs/jsyaml.js"></script>
-    <link rel="stylesheet" href="../hltest/vs.css" />
-    <script src="../base/alibs/highlight/highlight.min.js"></script>
-    <script src="../base/alibs/beautify-html.js"></script>
+    <!-- <script src="../beatest/beautify-html.min.js"></script> -->
   </head>
-  <body style="font-family:impact">
-		<h1>CODE SAMPLES</h1>
-    <pre><code id="code1" class="js"></code></pre>
+  <body style="font-family: impact">
+    <h1>CODE BEAUTIFY</h1>
+    <pre><code id="code1" class="js">HALLO</code></pre>
     <pre><code id="code2" class="html"></code></pre>
     <pre><code id="code3" class="css"></code></pre>
   </body>
-  <!-- <script src="../allglobals.js"></script> -->
-  <!-- <script src="../allfuncs.js"></script> -->
-  <script src="../hltest/closure.js"></script>
+  <script src="../allglobals.js"></script>
+  <script src="../allfuncs.js"></script>
 
-	<script src="../hltest/start.js"></script>
+  <script src="../beatest/start.js"></script>
   <script>
     onload = start;
   </script>
