--- a/beatest/index.html
+++ b/beatest/index.html
@@ -7,17 +7,21 @@
     <title>Document</title>
     <link rel="stylesheet" href="../base/assets/fonts/fonts.css" />
     <script src="../base/alibs/jsyaml.js"></script>
-    <!-- <script src="../beatest/beautify-html.min.js"></script> -->
+    <script src="../beatest/beautify.js"></script>
   </head>
   <body style="font-family: impact">
     <h1>CODE BEAUTIFY</h1>
-    <pre><code id="code1" class="js">HALLO</code></pre>
-    <pre><code id="code2" class="html"></code></pre>
-    <pre><code id="code3" class="css"></code></pre>
+		<div id="d1"><pre id="code1"></pre></div>
+		<div id="d2"><pre id="code2"></pre></div>
+		<div id="d3"><pre id="code3"></pre></div>
   </body>
   <script src="../allglobals.js"></script>
   <script src="../allfuncs.js"></script>
 
+  <script src="../beatest/done.js"></script>
+  <script src="../beatest/test.js"></script>
+  <script src="../beatest/bau1.js"></script>
+  <script src="../beatest/bau2.js"></script>
   <script src="../beatest/start.js"></script>
   <script>
     onload = start;
