--- a/beatest/index.html
+++ b/beatest/index.html
@@ -7,9 +7,10 @@
     <title>Document</title>
     <link rel="stylesheet" href="../base/assets/fonts/fonts.css" />
     <script src="../base/alibs/jsyaml.js"></script>
-    <script src="../beatest/beautify.min.js"></script>
-    <link rel="stylesheet" href="../base/alibs/beautify/gpretty/prettify.css" />
-		<script src="https://cdn.jsdelivr.net/gh/google/code-prettify@master/loader/run_prettify.js"></script>    
+    <!-- <script src="../beatest/beautify.min.js"></script> -->
+    <script src="../beatest/beautify.js"></script>
+    <!-- <link rel="stylesheet" href="../base/alibs/beautify/gpretty/prettify.css" /> -->
+		<!-- <script src="https://cdn.jsdelivr.net/gh/google/code-prettify@master/loader/run_prettify.js"></script>     -->
 		<!-- <script src="../base/alibs/beautify/gpretty/prettify.js"></script>
     <script src="../base/alibs/beautify/gpretty/run_prettify.js"></script>
     <script src="../base/alibs/beautify/gpretty/prettify.js"></script> -->
@@ -20,7 +21,7 @@
 		<div id="d1"><pre id="code1"></pre></div>
 		<div id="d2"><pre id="code2"></pre></div>
 		<div id="d3"><pre id="code3"></pre></div>
-		<pre class="prettyprint lang-js" id="gpretty"></pre>
+		<!-- <pre class="prettyprint lang-js" id="gpretty"></pre> -->
 
   </body>
   <script src="../allglobals.js"></script>
