--- a/pico0/index.html
+++ b/pico0/index.html
@@ -17,6 +17,7 @@
   <script src="../allfuncs.js"></script>
 
   <script src="../pico0/lexer.js"></script>
+  <script src="../pico0/parser.js"></script>
   <script src="../pico0/start.js"></script>
   <script>
     onload = start;
