--- a/pico0/index.html
+++ b/pico0/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="../base/assets/fonts/fonts.css" />
     <script src="../base/alibs/jsyaml.js"></script>
   </head>
-  <body style="background:#111">
+  <body>
     <pre><code id="code1" class="js"></code></pre>
     <pre><code id="code2" class="js"></code></pre>
     <pre><code id="code3" class="js"></code></pre>
@@ -18,6 +18,7 @@
 
   <script src="../pico0/lexer.js"></script>
   <script src="../pico0/parser.js"></script>
+  <script src="../pico0/littleParser.js"></script>
   <script src="../pico0/start.js"></script>
   <script>
     onload = start;
