--- a/pico0/index.html
+++ b/pico0/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <link rel="stylesheet" href="../base/assets/fonts/fonts.css" />
+    <script src="../base/alibs/jq3.js"></script>
     <script src="../base/alibs/jsyaml.js"></script>
   </head>
   <body>
@@ -13,14 +14,17 @@
     <pre><code id="code2" class="js"></code></pre>
     <pre><code id="code3" class="js"></code></pre>
   </body>
-  <script src="../allglobals.js"></script>
-  <script src="../allfuncs.js"></script>
+  <script src="../pico0/allglobals.js"></script>
+  <script src="../pico0/allfuncs.js"></script>
 
   <script src="../pico0/lexer.js"></script>
   <script src="../pico0/parser.js"></script>
   <script src="../pico0/littleParser.js"></script>
+  
+
+	<!-- <script src="../pico0/closure.js"></script> -->
   <script src="../pico0/start.js"></script>
-  <script>
+	<script>
     onload = start;
   </script>
 </html>
