--- a/pico0/index.html
+++ b/pico0/index.html
@@ -15,7 +15,7 @@
     <pre><code id="code3" class="js"></code></pre>
   </body>
   <script src="../pico0/allglobals.js"></script>
-  <script src="../pico0/allfuncs.js"></script>
+  <script src="../pico0/allf.js"></script>
 
   <script src="../pico0/lexer.js"></script>
   <script src="../pico0/parser.js"></script>
