--- a/MUELL.html
+++ b/MUELL.html
@@ -16,8 +16,8 @@
   <body>
 		<div id="table"></div>
 	</body>
-	<!-- <script src="../allfuncs.js"></script> -->
-	<!-- <script src="../allglobals.js"></script>
+	<!-- <script src="../allf.js"></script> -->
+	<!-- <script src="../allg.js"></script>
 	<script src="../animex/bau1.js"></script>
 	<script src="../animex/bau2.js"></script>
 	<script src="../animex/start.js"></script> -->
