--- a/_other/full/codingfull/index.html
+++ b/_other/full/codingfull/index.html
@@ -18,8 +18,8 @@
     </script>
   </body>
 
-  <script src="../allglobals.js"></script>
-  <script src="../allfuncs.js"></script>
+  <script src="../allg.js"></script>
+  <script src="../allf.js"></script>
   <script src="../codingfull/bau1.js"></script>
   <script src="../codingfull/bau2.js"></script>
   <script src="../codingfull/start.js"></script>
