--- a/_weg/23_4/animex/colors.html
+++ b/_weg/23_4/animex/colors.html
@@ -8,7 +8,7 @@
     <!-- <script src="../animex/chunk.js"></script> -->
     <!-- <script src="../animex/anime.js"></script> -->
     <script src="../base/alibs/anime/anime.js"></script>
-    <script src="../allfuncs.js"></script>
+    <script src="../allf.js"></script>
     <style>
       body {
         width: 100%;
