--- a/_weg/23_4/animex/master.html
+++ b/_weg/23_4/animex/master.html
@@ -11,8 +11,8 @@
   <body>
     <div id="table" style="padding:25px"></div>
   </body>
-  <script src="../allglobals.js"></script>
-  <script src="../allfuncs.js"></script>
+  <script src="../allg.js"></script>
+  <script src="../allf.js"></script>
   <script src="../animex/test.js"></script>
   <script>
     onload = animetest_color;
