--- a/_weg/23_4/animex/test96.html
+++ b/_weg/23_4/animex/test96.html
@@ -7,8 +7,8 @@
   </head>
   <body>
     <div id="dTable"></div>
-    <script src="../allglobals.js"></script>
-    <script src="../allfuncs.js"></script>
+    <script src="../allg.js"></script>
+    <script src="../allf.js"></script>
     <script src="../animex/test.js"></script>
     <script>
       onload = animetest96;
