--- a/_weg/23_4/animex/test98.html
+++ b/_weg/23_4/animex/test98.html
@@ -8,8 +8,8 @@
   <body>
     <div id="box" style="width: 100px; height: 100px; display: inline-block; background: red"></div>
     <div id="dTable"></div>
-    <script src="../allglobals.js"></script>
-    <script src="../allfuncs.js"></script>
+    <script src="../allg.js"></script>
+    <script src="../allf.js"></script>
     <script>
       dTable = mBy('dTable');
       let els = range(5).map((i) => mDiv(dTable, {w: 25, h: 25, background: rColor()}));
