--- a/_weg/23_4/color.html
+++ b/_weg/23_4/color.html
@@ -213,8 +213,8 @@
       </div>
     </section>
   </body>
-  <script src="../allglobals.js"></script>
-  <script src="../allfuncs.js"></script>
+  <script src="../allg.js"></script>
+  <script src="../allf.js"></script>
   <script src="../animex/test.js"></script>
   <script>
     onload = animetest_color;
