--- a/beatest/index.html
+++ b/beatest/index.html
@@ -24,8 +24,8 @@
 		<!-- <pre class="prettyprint lang-js" id="gpretty"></pre> -->
 
   </body>
-  <script src="../allglobals.js"></script>
-  <script src="../allfuncs.js"></script>
+  <script src="../allg.js"></script>
+  <script src="../allf.js"></script>
 
   <script src="../beatest/done.js"></script>
   <script src="../beatest/test.js"></script>
