--- a/highlighttest/index.html
+++ b/highlighttest/index.html
@@ -18,8 +18,8 @@
     <pre><code id="code2" class="js"></code></pre>
     <pre><code id="code3" class="js"></code></pre>
   </body>
-  <script src="../allglobals.js"></script>
-  <script src="../allfuncs.js"></script>
+  <script src="../allg.js"></script>
+  <script src="../allf.js"></script>
 
   <script src="../highlighttest/start.js"></script>
   <script>
