--- a/hltest/index.html
+++ b/hltest/index.html
@@ -16,8 +16,8 @@
     <pre><code id="code2" class="html"></code></pre>
     <pre><code id="code3" class="css"></code></pre>
   </body>
-  <!-- <script src="../allglobals.js"></script> -->
-  <!-- <script src="../allfuncs.js"></script> -->
+  <!-- <script src="../allg.js"></script> -->
+  <!-- <script src="../allf.js"></script> -->
   <script src="../hltest/closure.js"></script>
 
 	<script src="../hltest/start.js"></script>
