--- a/nature/index.html
+++ b/nature/index.html
@@ -17,8 +17,8 @@
     <div id="dMessage"></div>
     <div id="dTable"><pre class="battery-log">{"charged":"100%","cycles":130}</pre></div>
 
-    <script src="../allglobals.js"></script>
-    <script src="../allfuncs.js"></script>
+    <script src="../allg.js"></script>
+    <script src="../allf.js"></script>
     <script src="../nature/closure.js"></script>
 
     <script src="../nature/lsystem.js"></script>
