--- a/pico0/index.html
+++ b/pico0/index.html
@@ -14,15 +14,15 @@
     <pre><code id="code2" class="js"></code></pre>
     <pre><code id="code3" class="js"></code></pre>
   </body>
-  <script src="../pico0/allglobals.js"></script>
-  <script src="../pico0/allf.js"></script>
+  <!-- <script src="../allg.js"></script>
+  <script src="../allf.js"></script>
 
   <script src="../pico0/lexer.js"></script>
   <script src="../pico0/parser.js"></script>
-  <script src="../pico0/littleParser.js"></script>
+  <script src="../pico0/littleParser.js"></script> -->
   
 
-	<!-- <script src="../pico0/closure.js"></script> -->
+	<script src="../pico0/closure.js"></script>
   <script src="../pico0/start.js"></script>
 	<script>
     onload = start;
