--- a/ui/master.html
+++ b/ui/master.html
@@ -14,8 +14,8 @@
     <div id="dTable" style="padding: 25px"></div>
   </body>
 
-  <script src="../allglobals.js"></script>
-  <script src="../allfuncs.js"></script>
+  <script src="../allg.js"></script>
+  <script src="../allf.js"></script>
   <script src="../ui/done.js"></script>
   <script src="../ui/test.js"></script>
   <script src="../ui/bau.js"></script>
