--- a/visitor/index.html
+++ b/visitor/index.html
@@ -9,8 +9,8 @@
   <body>
 		<div id="dTable"></div>
 	</body>
-  <script src="../allglobals.js"></script>
-  <script src="../allfuncs.js"></script>
+  <script src="../allg.js"></script>
+  <script src="../allf.js"></script>
   <script src="../visitor/parser.js"></script>
   <script src="../visitor/parsetree.js"></script>
   <script src="../visitor/pp.js"></script>
