--- a/pico0/index.html
+++ b/pico0/index.html
@@ -10,19 +10,22 @@
     <script src="../base/alibs/jsyaml.js"></script>
   </head>
   <body>
+		<div id="div0"></div>
+    <pre id="code0"></pre>
     <pre><code id="code1" class="js"></code></pre>
     <pre><code id="code2" class="js"></code></pre>
     <pre><code id="code3" class="js"></code></pre>
   </body>
-  <!-- <script src="../allg.js"></script>
+  <script src="../allg.js"></script>
   <script src="../allf.js"></script>
 
   <script src="../pico0/lexer.js"></script>
   <script src="../pico0/parser.js"></script>
-  <script src="../pico0/littleParser.js"></script> -->
+  <script src="../pico0/littleParser.js"></script>
   
 
-	<script src="../pico0/closure.js"></script>
+	<!-- <script src="../pico0/closure.js"></script> -->
+  <script src="../pico0/bau1.js"></script>
   <script src="../pico0/start.js"></script>
 	<script>
     onload = start;
