--- a/pico0/index.html
+++ b/pico0/index.html
@@ -15,6 +15,8 @@
     <pre><code id="code1" class="js"></code></pre>
     <pre><code id="code2" class="js"></code></pre>
     <pre><code id="code3" class="js"></code></pre>
+    <pre id="code4"></pre>
+    <pre id="code5"></pre>
   </body>
   <script src="../allg.js"></script>
   <script src="../allf.js"></script>
