--- a/pico0/index.html
+++ b/pico0/index.html
@@ -17,6 +17,9 @@
     <pre><code id="code3" class="js"></code></pre>
     <pre id="code4"></pre>
     <pre id="code5"></pre>
+    <pre id="code6"></pre>
+    <pre id="code7"></pre>
+    <pre id="code8"></pre>
   </body>
   <script src="../allg.js"></script>
   <script src="../allf.js"></script>
